# rust

./: README.md  lab1.rs
Team-Pico-3W/: Cargo.toml
lab00/src/: main.rs
lab01/: Cargo.toml  build.rs  memory.x
lab01/src/: main.rs
lab02/: Cargo.toml  build.rs
lab02/src/: main.rs
lab03/: Cargo.toml
lab04/: Cargo.toml
lab05/: Cargo.toml
lab06/: Cargo.toml
lab07/: Cargo.toml
lab07/src/: main.rs
