[package]
name = "lab04"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m-semihosting="0.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
rp235x-hal = {version="0.3.0", features=["defmt", "critical-section-impl"]}
panic-probe={version="0.3", features=["print-defmt"]}
fixed = "1.12.0"

embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }