[package]
name = "lab07"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m-semihosting="0.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
rp235x-hal = {version="0.3.0", features=["defmt", "critical-section-impl"]}
panic-probe={version="0.3", features=["print-defmt"]}
fixed = "1.12.0"

# Statically allocated, initialized at runtime cell
static_cell = "2.1"

# WiFi Chip
cyw43 = { version = "0.3.0", path = "../embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", path = "../embassy/cyw43-pio", features = ["defmt"] }
embassy-net = { version = "0.7.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
#embassy-net-wiznet = { version = "0.2.0", path = "../embassy/embassy-net-wiznet", features = ["defmt"] }

# Graphics crate 
embedded-graphics = "0.8.1"

# SPI Display support
display-interface-spi = "0.5.0"
display-interface = "0.5.0"

heapless = "0.8"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
micromath = "2.0"

# Async embedded hal  
embedded-hal-async = "1.0"


embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
mipidsi = "0.8.0"
embassy-embedded-hal = { version = "0.3.0", path = "../embassy/embassy-embedded-hal"}
eeprom24x = "0.7.2"
