[package]
name = "lab8"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
#embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.7.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.2.0", path = "../embassy/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
#embassy-usb-logger = { version = "0.4.0", path = "../embassy/embassy-usb-logger" }
embassy-embedded-hal = { version = "0.3.0", path = "../embassy/embassy-embedded-hal"}
cyw43 = { version = "0.3.0", path = "../embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", path = "../embassy/cyw43-pio", features = ["defmt"] }
smoltcp = { version = "0.12.0" , default-features = false }

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
panic-probe = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
critical-section = "1.2.0"
#st7735-lcd = {version = "0.10.1", path = "../my_gits/st7735-lcd-rs"}
static_cell = "2.1"
itoa = "1.0"
#micromath = "2.1.0"

#st7735-lcd = { version = "0.10.1", git = "https://github.com/mohgTheOmen/st7735-lcd-rs", branch = "master" }

#mipidsi = "0.8.0"
#display-interface-spi = "0.5.0"

heapless = "0.8.0"
rand = { version = "0.8.5", default-features = false } 
alloc-cortex-m = "0.4.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies.embedded-graphics]
version = "0.8.1"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
